--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
-  background-color: #000;
+  background-image: url('http://i.imgur.com/6XTrxsI.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0px;
   overflow: hidden;
 }
